--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Department
 email: you@domain.net
 description: > # this means to ignore newlines until "baseurl:"
   Department Home Page
-baseurl: "jekyll-homemenu" # the subpath of your site, e.g. /blog
+baseurl: "/jekyll-homemenu" # the subpath of your site, e.g. /blog
 url: "https://tlezotte.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 domain: "github.io"
 name: Department
