--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jekyll:build": "jekyll build",
     "jekyll:min": "uglifyjs _site/assets/js/main.js -c -m -o _site/assets/js/main.min.js --source-map",
     "sync": "rsync -avz --exclude-from '.rsync-exclude' _site/* $npm_package_config_user@$npm_package_config_server:$npm_package_config_home",
+    "build": "npm-run-all docs:*;npm-run-all jekyll:*",
     "deploy": "npm-run-all docs:*;npm-run-all jekyll:*;npm sync",
     "serve": "jekyll serve -L",
     "test": "mocha"
