--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "jekyll:min": "uglifyjs _site/assets/js/main.js -c -m -o _site/assets/js/main.min.js --source-map",
     "sync": "rsync -avz --exclude-from '.rsync-exclude' _site/* $npm_package_config_user@$npm_package_config_server:$npm_package_config_home",
     "build": "npm-run-all docs:*;npm-run-all jekyll:*",
-    "deploy": "npm-run-all docs:*;npm-run-all jekyll:*;npm sync",
+    "deploy": "npm-run-all docs:*;npm-run-all jekyll:*;npm run sync",
     "serve": "jekyll serve -L",
     "test": "mocha"
   },
   "devDependencies": {
     "ink-docstrap": "^1.3.0",
-    "michelangelo": "^0.5.1"
+    "js-doc": "^0.5.0",
+    "kss": "^3.0.0-beta.18",
+    "michelangelo": "^0.5.1",
+    "npm-run-all": "^4.1.2",
+    "uglifyjs": "^2.4.11"
   },
   "dependencies": {}
 }
